# telegram_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
bot/: __init__.py  admin.py  apps.py  mistral_client.py  models.py  serializers.py  services.py  telegram_handler.py  urls.py  views.py
bot/migrations/: 0001_initial.py
tg_bot/: asgi.py  settings.py  urls.py  wsgi.py
