[project]
name = "mlbcountswebapp"
version = "0.1.0"
description = "исправление форматирования"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "gspread>=6.1.4",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "pymongo>=4.10.1",
    "requests>=2.32.3",
    "ruff>=0.14.2",
]

[tool.ruff]               #огнорирует данные файлы и не форматирует их
exclude = [".venv",
".gitignore",
".__pycache__"

]

fix = true # включает автоматические исправления

line-length = 88 # длина строки по умолчанию

show-fixes = true # показывает все исправленные нарушения.

unsafe-fixes = true #разрешить применение небезопасных измнений, подсказка включена

[tool.ruff.analyze]
preview = true # Следует ли включить режим предварительного просмотра. 
                #Если режим предварительного просмотра включен, Ruff будет отображать нестабильные команды.

[tool.ruff.format]
docstring-code-format = true # форматирование кода
docstring-code-line-length = 60 #ограничение длины кода 
exclude = [".venv",
           "__pycache__",
           ".gitignore",
           "README.md"


]

# Use tabs instead of 4 space indentation.
indent-style = "tab"

# Prefer single quotes over double quotes.
quote-style = "double" 

skip-magic-trailing-comma = true #игнорирование волшебной запятой

[tool.ruff.lint]
preview = true #режим предварительного просмотра

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
